# keel-core

./: .gitignore  CLAUDE.md  ESTADO.md  Makefile  README.md  ROADMAP.md  acceso-rapido.md  install.sh  pyproject.toml  uninstall.sh
.claude/: mcp-config.json
.github/workflows/: ci.yml  release.yml
scripts/launchd/: install-ciclo.sh  install-notificaciones.sh
scripts/raycast/: keel-clip.sh  keel-conversar.sh
src/keel/: __init__.py
src/keel/api/: app.py  schemas.py
src/keel/api/routers/: buscar.py  (+7 more)
src/keel/cli/: agenda.py  alias_cli.py  config_cli.py  main.py  notas_cli.py  perfil.py  persona.py  utils.py
src/keel/embedder/: __init__.py  base.py  fastembed.py
src/keel/engine/: __init__.py  aprendizaje.py  busqueda.py  pregunta.py  preparar.py  presencia.py  reflexion.py  respuesta.py  sesion.py  sintesis.py  stats.py  sugerencias.py  volcado.py
src/keel/io/: calendario.py  clipboard.py  fuentes.py  importar.py  obsidian.py  sos.py
src/keel/llm/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai_llm.py
src/keel/mcp/: server.py
src/keel/models/: __init__.py  aprendizaje.py  config.py  nota.py  perfil.py  persona.py  reflexion.py
src/keel/security/: api_keys.py  cifrado.py  llave.py
src/keel/storage/: __init__.py  local.py  vectorial.py
tests/: test_agenda.py  test_alias.py  test_api.py  test_api_keys.py  test_api_v2.py  test_aprendizaje.py  test_backup.py  test_busqueda.py  test_calendario.py  test_ciclo.py  test_cifrado.py  test_clipboard.py  test_config.py  test_engine.py  test_fuentes.py  test_historial.py  test_hito5.py  test_hoy.py  test_importar.py  test_llm_cloud.py  test_mcp.py  test_models.py  test_notas.py  test_obsidian.py  test_perfil_cli.py  test_persona_mgmt.py  test_pregunta.py  test_preparar.py  test_reflexion.py  test_sesion.py  test_sintesis.py  test_sos.py  test_stats.py  test_status.py  test_sugerencias.py  test_utils_cli.py  test_vectorial.py  test_volcado.py
tests/fixtures/: perfil_usuario.json  persona_ejemplo.json
web/: app.js  index.html  manifest.json  style.css  sw.js
