[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keel-core"
version = "0.1.0"
description = "Motor de extensión cognitiva personal — local first"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "lancedb>=0.5",
    "fastembed>=0.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "mcp[cli]>=1.0",
    "cryptography>=42.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
anthropic = [
    "anthropic>=0.30",
]
openai = [
    "openai>=1.30",
]
cloud = [
    "anthropic>=0.30",
    "openai>=1.30",
]

[project.scripts]
keel = "keel.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/keel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # líneas largas — ya controladas por line-length en format

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811"]  # redefinición de fixtures en tests es intencional
